No moar bus error.

--- a/__rvp/TODO
+++ b/__rvp/TODO
@@ -1,2 +1,3 @@
-CHECK ../maps/plat.fdf ../maps/pnp_flat.fdf.
+CHECK ../maps/plat.fdf ../maps/pnp_flat.fdf. -- DONE
 Find window exit callback. And do clean-up on this instead of esc key
+Add error checking in input files and add verbose errors.
