--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 CHECK ../maps/plat.fdf ../maps/pnp_flat.fdf. -- DONE
-Find window exit callback. And do clean-up on this instead of esc key - TDB
+Find window exit callback. And do clean-up on this instead of esc key - DONE
 Add error checking in input files and add verbose errors. -- DONE
 Add offset on either x or y to center representation on screen. -- DONE
 Add Height coloring. -- DONE
